codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__question_turn_end_tests__question_turn_end_recovered_composer.snap
---
source: tui/src/chatwidget/tests/question_turn_end_tests.rs
expression: "normalize_response_clock(normalize_snapshot_paths(render_bottom_popup(&chat,\n80)))"
---
› $tool existing draft
  Over-ear
  Under 250

  GPT-5.6-Sol default · /tmp/project · ⏱ hh:mm XM
